--- a/test/getusermedia.html
+++ b/test/getusermedia.html
@@ -25,7 +25,7 @@
 
         function action () {
             // Not showing vendor prefixes.
-            navigator.getUserMedia({video: true, audio: true}, function(localMediaStream) {
+            navigator.getUserMedia({audio: true, "video": {"mandatory": {}, "optional": []}}, function(localMediaStream) {
                 var video = document.querySelector('video');
                 video.src = window.URL.createObjectURL(localMediaStream);
 
