--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,7 @@
 <html>
     <title> Xingnan`s Test Page</title>
 <body>
-    <a href="getusermedia.html">GetUserMedia API test</a>
+    <a href="getusermedia.html">GetUserMedia API test</a><br/>
+    <a href="videocssfilter.html">Video + CSS filter</a><br/>
 </body>
 </html>
