--- a/test/index.html
+++ b/test/index.html
@@ -3,5 +3,6 @@
 <body>
     <a href="getusermedia.html">GetUserMedia API test</a><br/>
     <a href="videocssfilter.html">Video + CSS filter</a><br/>
+    <a href="AudioLatency/index.html">Audio Latency</a><br/>
 </body>
 </html>
