--- a/test/audio-test.html
+++ b/test/audio-test.html
@@ -3,20 +3,25 @@
 <body>
     <script>
         var gain = null;
+        var context = null;
+        var buffer = null;
         window.addEventListener('load', init, false);
         function init() {
             try {
                 // Fix up for prefixing
                 window.AudioContext = window.AudioContext||window.webkitAudioContext;
-                var context = new AudioContext();
-                var audio = new Audio("music.ogg");
-                audio.loop =  true;
-                audio.play();
-                var audiosource = context.createMediaElementSource(audio);
-                gain = context.createGain();
-                audiosource.connect(gain);
-                gain.connect(context.destination);
-                //gain.gain.value = 0;
+                context = new AudioContext();
+                var request = new XMLHttpRequest();
+                request.open('GET', "music.ogg", true);
+                request.responseType = 'arraybuffer';
+
+                // Decode asynchronously
+                request.onload = function() {
+                    context.decodeAudioData(request.response, function(buf) {
+                        buffer = buf;
+                    }, null);
+                }
+                request.send();
             }
             catch(e) {
                 alert('Web Audio API is not supported in this browser');
@@ -30,7 +35,35 @@
         function unmute() {
             gain.gain.value = 1;
         }
+
+        function play_audio_tag() {
+            var audio = new Audio("music.ogg");
+            //audio.loop =  true;
+            audio.play();
+        }
+
+        function play() {
+            var source = context.createBufferSource();
+            source.buffer = buffer;
+            gain = context.createGain();
+            source.connect(gain);
+            gain.connect(context.destination);
+            source.start(0);
+        }
+
+        function play_plus() {
+            var audio = new Audio("music.ogg");
+            //audio.loop =  true;
+            audio.play();
+            var audiosource = context.createMediaElementSource(audio);
+            gain = context.createGain();
+            audiosource.connect(gain);
+            gain.connect(context.destination);
+            //gain.gain.value = 0;
+        }
     </script>
+    <input type="button" onclick="play();" value="play with web audio">
+    <input type="button" onclick="play_plus();" value="play with audio tag + web audio">
     <input type="button" onclick="mute();" value="mute">
     <input type="button" onclick="unmute();" value="unmute">
 </body>
